# distributed_systems_project

./: .gitignore  README.md  pyproject.toml  requirements.txt  tasks.py
client/: client.py
server/: server.py
shared/: game_state.py
src/client/: client.py  level.py  localLevel.py  main.py
src/client/objects/: bombObject.py  explosionObject.py  playerObject.py
src/client/services/: comms.py
src/client/sprites/: bomb.py  explosion.py  floor.py  player.py  wall.py
src/server/: follower.py  leader.py  main.py  server_loop.py
src/server/objects/: bomb.py  explosion.py  player.py
src/server/services/: comms.py  follower_comms.py  peer_comms.py  queue_service.py
