[tool.poetry]
name = "distributed-systems-project"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
invoke = "^2.2.1"
pygame = "^2.6.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
